# nmrtools

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
notebooks/: examples.ipynb
src/nmrtools/: __init__.py  multiplet.py  peaks.py  plot.py  process.py  simulation.py  utils.py
tests/: test_multiplet.py  test_multiplet_simulation.py  test_read_nmr.py  test_utils.py
