[metadata]
name = nmrtools
description = NMR tools
author = Gabriel Riquelme
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    nmrtools
install_requires =
    matplotlib>=3.5
    numpy>=1.22
    scikit-image>=0.19
    scikit-learn>=1.1
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
nmrtools = py.typed

[flake8]
max-line-length = 160